parslers-benchmark/src/tests/invalid/syntaxErr/function/noBodyAfterFuncs.wacc
# program missing body after function declaration

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int f() is
  return 0 
  end
end
	
